syntax = "proto3";

option csharp_namespace = "GrpcDemo";

service ToDoIt {
	rpc CreateToDoItem(CreateToDoRequest) returns (CreateToDoResponse);
	rpc GetToDoItemById(GetToDoRequest) returns (GetToDoResponse);
	rpc GetAllToDoItems(GetAllToDoRequest) returns (stream GetToDoResponse);
	rpc UpdateToDoItem(UpdateToDoRequest) returns (UpdateToDoResponse);
	rpc DeleteToDoItem(DeleteToDoRequest) returns (DeleteToDoResponse);
}

message CreateToDoRequest {
	string title = 1;
	string description = 2;
}

message CreateToDoResponse {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message GetToDoRequest {
	int32 id = 1;
}

message GetToDoResponse {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message GetAllToDoRequest {
}

message UpdateToDoRequest {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message UpdateToDoResponse {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message DeleteToDoRequest {
	int32 id = 1;
}

message DeleteToDoResponse {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}